# Networth-Tracker

./: .gitignore  GEMINI.md  app.py  import_data_to_supabase.py  networth_data.csv  package-lock.json  package.json  pyproject.toml  test_supabase.py  turbo.json  vercel.json
.streamlit/: config.toml
apps/api/: main.py  package.json  requirements.txt
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/ui/: avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  checkbox.tsx  dropdown-menu.tsx  progress.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  tabs.tsx  tooltip.tsx
apps/web/src_legacy/: App.tsx  index.css
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
supabase/: config.toml
supabase/migrations/: 20260227192153_create_networth_entries_table.sql  20260302000000_create_rebalance_targets_table.sql
templates/: index.html
